# CrowBack

./: CMakeLists.txt  File structure without build and vcpkg_installed folders.md  Full file structure.md  Project Documentation (Grigorii Tishchuk, 23D).docx  README.md  Task.cpp  Task.hpp  TaskManager.cpp  TaskManager.hpp  main.cpp  vcpkg.json
tests/: TaskManagerTests.cpp
